# qtmcp

./: README.md
CMake/: CMakeLists.txt
CMake/Examples/: CMakeLists.txt
CMake/Examples/MCPXServer/: CMakeLists.txt
CMake/MCPCore/: CMakeLists.txt
Examples/MCPXServer/MCPServerConfig/: ServerConfig.json
Examples/MCPXServer/MCPServerConfig/Prompts/: code_review.json  generate_api_doc.json
Examples/MCPXServer/MCPServerConfig/Resources/: config_file.json  system_info.json  wrapper_dynamic.json  wrapper_example.json
Examples/MCPXServer/MCPServerConfig/Tools/: calculator.json
Examples/MCPXServer/src/: MyExampleHandler.cpp  MyExampleHandler.h  MyResourceHandler.cpp  MyResourceHandler.h  main.cpp
MCPCore/include/: IMCPPromptService.h  IMCPResourceService.h  IMCPServer.h  IMCPServerConfig.h  IMCPToolService.h  MCPCore_global.h.h  MCPHelper.h  MCPToolInputSchema.h  MCPToolOutputSchema.h
MCPCore/src/Application/: MCPAutoServer.cpp  MCPAutoServer.h
MCPCore/src/MCPConfig/: IMCPServerConfig.cpp  MCPPromptsConfig.cpp  MCPPromptsConfig.h  MCPResourcesConfig.cpp  MCPResourcesConfig.h  MCPServerConfig.cpp  MCPServerConfig.h  MCPToolsConfig.cpp  MCPToolsConfig.h
MCPCore/src/MCPError/: MCPError.cpp  MCPError.h  MCPErrorCode.cpp  MCPErrorCode.h  MCPErrorHandler.cpp  MCPErrorHandler.h
MCPCore/src/MCPLog/: MCPLog.cpp  MCPLog.h
MCPCore/src/MCPMessage/: MCPClientInitializeMessage.cpp  MCPClientInitializeMessage.h  MCPClientMessage.cpp  MCPClientMessage.h  MCPMessage.cpp  MCPMessage.h  MCPMessageSender.cpp  MCPMessageSender.h  MCPMessageType.cpp  MCPMessageType.h  MCPServerMessage.cpp  MCPServerMessage.h
MCPCore/src/MCPMiddleware/: IMCPMiddleware.h  MCPMiddlewares.cpp  MCPMiddlewares.h
MCPCore/src/MCPPrompt/: MCPPrompt.cpp  MCPPrompt.h  MCPPromptService.cpp  MCPPromptService.h
MCPCore/src/MCPResource/: MCPContentResource.cpp  MCPContentResource.h  MCPFileResource.cpp  MCPFileResource.h  MCPResource.cpp  MCPResource.h  MCPResourceService.cpp  MCPResourceService.h  MCPResourceWrapper.cpp  MCPResourceWrapper.h
MCPCore/src/MCPRouting/: MCPContext.cpp  MCPContext.h  MCPInitializeHandler.cpp  MCPInitializeHandler.h  MCPRequestDispatcher.cpp  MCPRequestDispatcher.h  MCPRouter.cpp  MCPRouter.h  MCPSubscriptionHandler.cpp  MCPSubscriptionHandler.h
MCPCore/src/MCPServer/: IMCPServer.cpp  MCPNotificationHandlerBase.cpp  MCPNotificationHandlerBase.h  MCPPromptNotificationHandler.cpp  MCPPromptNotificationHandler.h  MCPResourceNotificationHandler.cpp  MCPResourceNotificationHandler.h  MCPServer.cpp  MCPServer.h  MCPServerHandler.cpp  MCPServerHandler.h  MCPToolNotificationHandler.cpp  MCPToolNotificationHandler.h
MCPCore/src/MCPSession/: MCPPendingNotification.cpp  MCPPendingNotification.h  MCPSession.cpp  MCPSession.h  MCPSessionService.cpp  MCPSessionService.h
MCPCore/src/MCPTools/: MCPTool.cpp  MCPTool.h  MCPToolService.cpp  MCPToolService.h
MCPCore/src/MCPTransport/: IMCPTransport.h
MCPCore/src/MCPTransport/MCPHttpTransport/: MCPHttpTransport.cpp  MCPHttpTransport.h  MCPHttpTransportAdapter.cpp  MCPHttpTransportAdapter.h
MCPCore/src/MCPTransport/MCPHttpTransport/impl/: MCPHttpConnection.cpp  MCPHttpConnection.h  MCPHttpMessageParser.cpp  MCPHttpMessageParser.h  MCPHttpReplyMessage.cpp  MCPHttpReplyMessage.h  MCPHttpRequestData.cpp  MCPHttpRequestData.h  MCPHttpRequestParser.cpp  MCPHttpRequestParser.h  MCPHttpResponseBuilder.cpp  MCPHttpResponseBuilder.h  MCPThreadPool.cpp  MCPThreadPool.h
MCPCore/src/Utils/: MCPHandlerResolver.cpp  MCPHandlerResolver.h  MCPHelper.cpp  MCPInvokeHelper.cpp  MCPInvokeHelper.h  MCPMetaObjectHelper.cpp  MCPMetaObjectHelper.h  MCPMethodHelper.cpp  MCPMethodHelper.h  MCPResourceContentGenerator.cpp  MCPResourceContentGenerator.h  MCPToolInputSchema.cpp  MCPToolOutputSchema.cpp
